--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,6 @@
         "no-param-reassign": "off",
         "jsx-a11y/click-events-have-key-events": "off",
         "jsx-a11y/no-static-element-interactions": "off",
-        "jsx-a11y/label-has-for": "off",
+        "jsx-a11y/label-has-for": "off"
     }
 }
